--- a/CrossFileHelper/CrossFileHelper.csproj
+++ b/CrossFileHelper/CrossFileHelper.csproj
@@ -1,112 +1,147 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;uap10.0;<!--Xamarin.iOS10;-->MonoAndroid70</TargetFrameworks>
-	<!--<TargetFramework>netstandard2.0</TargetFramework>-->
-	  <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;monoandroid;uap10.0;xamarinios;xamarinmac;xamarintvos;</AssetTargetFallback>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Tushar Koshti</Authors>
-    <Company>Lazy Man Studios</Company>
-    <Product>.NET Standard library to make easy file access on cross platform devices</Product>
-    <Description>CrossFileHelper helps you to jump start to do file related functions in a quick and easy way.</Description>
-    <Copyright>Copyright Tushar Koshti</Copyright>
-    <PackageProjectUrl>https://github.com/07101994/CrossFileHelper</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/07101994/CrossFileHelper/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/07101994/CrossFileHelper</RepositoryUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <PackageTags>Xamarin,.NET Standard,Android,IOS,UWP,File Helper,File Utility</PackageTags>
-    <Version>1.0.1</Version>
-  </PropertyGroup>
-<PropertyGroup Condition="'$(TargetFramework)' == 'uap10.0'">
-    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-    <NugetTargetMoniker>UAP,Version=v10.0</NugetTargetMoniker>
-    <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
-    <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
-    <DefineConstants>$(DefineConstants);WINDOWS_UWP</DefineConstants>
-    <LanguageTargets>$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets</LanguageTargets>
-  </PropertyGroup>
-  <!--<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.iOS10'">
-    <TargetFrameworkIdentifier>Xamarin.iOS</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
-    <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <DefineConstants>$(DefineConstants);IOS1_0</DefineConstants>
-    <DebugType>full</DebugType>
-    <LanguageTargets>$(MSBuildProgramFiles32)\MSBuild\Xamarin\iOS\Xamarin.iOS.CSharp.targets</LanguageTargets>
-  </PropertyGroup>-->
-  <PropertyGroup Condition="'$(TargetFramework)' == 'MonoAndroid70'">
-    <TargetFrameworkIdentifier>MonoAndroid</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
-    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <DebugType>full</DebugType>
-    <DefineConstants>$(DefineConstants);MONOANDROID7_0</DefineConstants>
-    <!--<AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>-->
-    <LanguageTargets>$(MSBuildProgramFiles32)\MSBuild\Xamarin\Android\Xamarin.Android.CSharp.targets</LanguageTargets>
-  </PropertyGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.Windows.Compatibility">
-      <Version>2.0.0-preview1-25914-04</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <!--<PackageReference Include="Com.Airbnb.iOS.Lottie" Version="2.1.3" />
-    <PackageReference Include="Microsoft.DotNet.Analyzers.Compatibility" Version="0.1.2-alpha" />
-    <PackageReference Include="Xam.Plugins.Android.SlidingUpPanel" Version="3.4.0" />
-    <PackageReference Include="Microsoft.Net.Compilers" Version="2.4.0" />-->
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFrameworks>
+			netstandard2.0;net462;uap10.0;Xamarin.iOS10;<!--Xamarin.Mac20;Xamarin.TVOS10;Xamarin.WatchOS10;-->MonoAndroid70;netcoreapp2.0
+		</TargetFrameworks>
+		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Tushar Koshti</Authors>
+		<Company>Lazy Man Studios</Company>
+		<Product>.NET Standard library to make easy file access on cross platform devices</Product>
+		<Description>CrossFileHelper helps you to jump start to do file related functions in a quick and easy way.</Description>
+		<Copyright>Copyright Tushar Koshti</Copyright>
+		<PackageProjectUrl>https://github.com/07101994/CrossFileHelper</PackageProjectUrl>
+		<PackageLicenseUrl>https://github.com/07101994/CrossFileHelper/blob/master/LICENSE</PackageLicenseUrl>
+		<RepositoryUrl>https://github.com/07101994/CrossFileHelper</RepositoryUrl>
+		<RepositoryType>GitHub</RepositoryType>
+		<PackageTags>Xamarin,.NET Standard,Android,IOS,UWP,File Helper,File Utility</PackageTags>
+		<Version>1.0.1</Version>
+	</PropertyGroup>
 
-<ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Compile Include="Platforms\net45\**\*.cs" />
-  </ItemGroup>
-  <!--<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <Compile Include="Platforms\netstandard1.3\**\*.cs" />
-  </ItemGroup>-->
-  <!--<ItemGroup Condition=" '$(TargetFramework)' == 'Xamarin.iOS10' ">
-    <Reference Include="System" />
-    <Reference Include="System.Runtime" />
-    <Reference Include="System.Collections" />
-    <Reference Include="System.Threading.Tasks" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="Xamarin.iOS" />
-    <Compile Include="Platforms\xamarin.ios10\**\*.cs" />
-  </ItemGroup>-->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'MonoAndroid70' ">
-    <Reference Include="Mono.Android" />
-    <Reference Include="System" />
-    <Reference Include="System.Collections" />
-    <Reference Include="System.Threading.Tasks" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime" />
-    <Reference Include="System.Threading.Tasks" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml" />
-    <Compile Include="Platforms\monoandroid70\**\*.cs" />
-    <!--<Compile Include="Resources\**\*.cs" />-->
-    <AndroidResource Include="Resources\**\*.axml" />
-    <AndroidResource Include="Resources\**\*.xml" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform " Version="6.0.4" />
-    <Compile Include="Platforms\uap10.0\**\*.cs" />
-  </ItemGroup>
+	<!--<PropertyGroup>
+		-->
+	<!--<OutputType>Exe</OutputType>-->
+	<!--
+		<TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
+		<RuntimeIdentifiers>win7-x86;win7-x64</RuntimeIdentifiers>
+	</PropertyGroup>-->
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net462'">
+		<!-- We must pick a single RID for desktop in order to consume native libraries. -->
+		<RuntimeIdentifier>win7-x86</RuntimeIdentifier>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(TargetFramework)' == 'MonoAndroid70'">
+		<!-- We must pick a single RID for desktop in order to consume native libraries. -->
+		<TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
+		<TargetFrameworkIdentifier>MonoAndroid</TargetFrameworkIdentifier>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.iOS10'">
+		<!--We must pick a single RID for desktop in order to consume native libraries.-->
+		<TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
+		<TargetFrameworkIdentifier>Xamarin.iOS</TargetFrameworkIdentifier>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(TargetFramework)' == 'uap10.0'">
+		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+		<NugetTargetMoniker>UAP,Version=v10.0</NugetTargetMoniker>
+		<TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
+		<TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
+		<TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+		<TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
+		<TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+		<DefineConstants>$(DefineConstants);WINDOWS_UWP</DefineConstants>
+		<LanguageTargets>$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets</LanguageTargets>
+	</PropertyGroup>
+	<!--<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.Mac20'">
+		-->
+	<!-- We must pick a single RID for desktop in order to consume native libraries. -->
+	<!--
+		<TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+		<TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
+	</PropertyGroup>-->
+	<ItemGroup>
+		<!--<Compile Include="**\*.cs" />-->
+		<EmbeddedResource Include="**\*.resx" />
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Abstractions\*.cs" />
+		<Compile Remove="Platform\**\*.cs" />
+		<None Include="Platform\**\*.cs" />
+		<None Include="Resources\*.cs" />
+		<Compile Remove="Resources\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Include="Abstractions\IFileHelper.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+		<Compile Include="Platform\Netstandard2.0\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+		<Compile Include="Platform\Net461\**\*.cs" />
+		<PackageReference Include="System.Console" Version="4.3.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0'">
+		<Compile Include="Platform\Shared\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
+		<Compile Include="Platform\Windows-common\**\*.cs" />
+		<Compile Include="Platform\Uap10.0\**\*.cs" />
+		<PackageReference Include="System.Reflection" Version="4.3.0" />
+		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
+		<PackageReference Include="System.Reflection.Extensions" Version="4.3.0" />
+		<PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
+		<PackageReference Include="System.Diagnostics.TraceSource" Version="4.3.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'Xamarin.iOS10' ">
+		<Compile Include="Platform\Apple-common\**\*.cs" />
+		<Compile Include="Platform\Ios\**\*.cs" />
+		<Compile Include="Platform\Xamarin-common\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'Xamarin.Mac20' ">
+		<Compile Include="Platform\Apple-common\**\*.cs" />
+		<Compile Include="Platform\Mac\**\*.cs" />
+		<Compile Include="Platform\Xamarin-common\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'Xamarin.TVOS10' ">
+		<Compile Include="Platform\Apple-common\**\*.cs" />
+		<Compile Include="Platform\Tvos\**\*.cs" />
+		<Compile Include="Platform\Xamarin-common\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'Xamarin.WatchOS10' ">
+		<Compile Include="Platform\Apple-common\**\*.cs" />
+		<Compile Include="Platform\Watchos\**\*.cs" />
+		<Compile Include="Platform\Xamarin-common\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'MonoAndroid70' ">
+		<Reference Include="Mono.Android" />
+		<Compile Include="Platform\Android\**\*.cs" />
+		<Compile Include="Platform\Xamarin-common\**\*.cs" />
+		<AndroidResource Include="Resources\**\*.xml" SubType="Designer" Generator="MSBuild:UpdateAndroidResources" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.0' ">
+		<Compile Include="Platform\Netcoreapp2.0\**\*.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
+
+	<Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
