--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,5 +9,9 @@ environment:
     NUGET_APIKEY:
       secure: iR2nxYunwR8NlbHe5TRd0h2CETPfs9QPf6ibViJkjq8=
 configuration: Release
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 build_script:
-  - ps: .\build.ps1 -verbosity Diagnostic
+  - ps: .\build.ps1 -verbosity Minimal
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
