--- a/CrossFileHelper/CrossFileHelper.csproj
+++ b/CrossFileHelper/CrossFileHelper.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>
-			netstandard2.0;net462;uap10.0;Xamarin.iOS10;<!--Xamarin.Mac20;Xamarin.TVOS10;Xamarin.WatchOS10;-->MonoAndroid70;netcoreapp2.0
+			netstandard2.0;net462;uap10.0;Xamarin.iOS10;Xamarin.Mac20;Xamarin.TVOS10;Xamarin.WatchOS10;MonoAndroid70;netcoreapp2.0
 		</TargetFrameworks>
 		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -51,13 +51,31 @@
 		<DefineConstants>$(DefineConstants);WINDOWS_UWP</DefineConstants>
 		<LanguageTargets>$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets</LanguageTargets>
 	</PropertyGroup>
-	<!--<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.Mac20'">
-		-->
+	<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.Mac20'">
+		
 	<!-- We must pick a single RID for desktop in order to consume native libraries. -->
-	<!--
+	
 		<TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
 		<TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
-	</PropertyGroup>-->
+	</PropertyGroup>
+
+		<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.TVOS10'">
+		
+	<!-- We must pick a single RID for desktop in order to consume native libraries. -->
+	
+		<TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
+		<TargetFrameworkIdentifier>Xamarin.TVOS</TargetFrameworkIdentifier>
+	</PropertyGroup>
+
+	
+		<PropertyGroup Condition="'$(TargetFramework)' == 'Xamarin.WatchOS10'">
+		
+	<!-- We must pick a single RID for desktop in order to consume native libraries. -->
+	
+		<TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
+		<TargetFrameworkIdentifier>Xamarin.WatchOS</TargetFrameworkIdentifier>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<!--<Compile Include="**\*.cs" />-->
 		<EmbeddedResource Include="**\*.resx" />
@@ -70,8 +88,8 @@
 		<Compile Remove="Resources\*.cs" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
-
+	<ItemGroup>
+	  <None Remove="Platform\NetStandard\FileHelper.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -82,11 +100,11 @@
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-		<Compile Include="Platform\Netstandard2.0\**\*.cs" />
+		<Compile Include="Platform\Netstandard\**\*.cs" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
-		<Compile Include="Platform\Net461\**\*.cs" />
+	<ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+		<Compile Include="Platform\NetFramework\**\*.cs" />
 		<PackageReference Include="System.Console" Version="4.3.0" />
 	</ItemGroup>
 
@@ -96,7 +114,7 @@
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
 		<Compile Include="Platform\Windows-common\**\*.cs" />
-		<Compile Include="Platform\Uap10.0\**\*.cs" />
+		<Compile Include="Platform\UWP\**\*.cs" />
 		<PackageReference Include="System.Reflection" Version="4.3.0" />
 		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
 		<PackageReference Include="System.Reflection.Extensions" Version="4.3.0" />
@@ -136,11 +154,15 @@
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.0' ">
-		<Compile Include="Platform\Netcoreapp2.0\**\*.cs" />
+		<Compile Include="Platform\Netcore\**\*.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Platform\Mac\" />
 	</ItemGroup>
 
 	<Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
