--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,3 +12,11 @@ configuration: Release
 build_script:
   - ps: xcopy /s "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\*.*" "C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\"
   - ps: .\build.ps1 -verbosity Minimal
+artifacts:
+- path: CrossFileHelper\bin\Release\*.nupkg/
+  name: Nuget package
+deploy:
+- provider: NuGet
+  server: https://ci.appveyor.com/nuget/07101994-46vpdv1so3tq
+  api_key:
+    secure: iR2nxYunwR8NlbHe5TRd0h2CETPfs9QPf6ibViJkjq8=  
